--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -2,28 +2,12 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, schoolsForTeacher: List[models.timetoteach.School] )
 
 @timetoteachAppMain(handler, s"Add New Class",
- userPictureUri, userFirstName, userFamilyName) {
+ userPictureUri, userFirstName, userFamilyName, None) {
  <li></li>
 }{
  <div class="container">
 
   <div class="add-new-class-form-section">
-
-   <div class="d-flex">
-    <ul class="nav mr-auto justify-content-between">
-     <li class="nav-item manage-class-nav-item-leftmost">
-      <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
-       Dashboard</a>
-     </li>
-
-     <li class="nav-item manage-class-nav-item-on-left">
-      <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
-       Classes Home</a>
-     </li>
-
-    </ul>
-   </div>
-
 
    <h6 class="text-center text-muted form-header add-new-class-header">New Class Details</h6>
 
