--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -2,7 +2,7 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails)
 
 @timetoteachAppMain(handler, s"Manage Class - " + classDetails.className.name,
-    userPictureUri, userFirstName, userFamilyName) {
+    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id)) {
 
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
@@ -36,41 +36,6 @@
     <div class="container">
 
         <div class="manage-class-form-section">
-
-            <div class="in-app-menu-medium-and-up">
-                <div class="d-flex ">
-                    <ul class="nav mr-auto justify-content-between">
-                        <li class="nav-item manage-class-nav-item-leftmost">
-                            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
-                                Dashboard</a>
-                        </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
-                            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
-                                Classes Home</a>
-                        </li>
-                    </ul>
-
-                    <ul class="nav justify-content-end">
-
-                        <li class="nav-item manage-class-nav-item-on-right">
-                            <a id="manage-class-goto-timetable" class="btn btn-info" role="button"
-                            href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.id.id)">
-                                Class Timetable</a>
-                        </li>
-
-                        <li class="nav-item manage-class-nav-item-on-right">
-                            <a class="btn btn-info" role="button"
-                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForClass(classDetails.id.id)">
-                                Termly Plans</a>
-                        </li>
-
-                        <li class="nav-item manage-class-nav-item-on-rightmost">
-                            <button id="manage-class-goto-timetable" type="button" class="btn btn-info" disabled="true">
-                                Weekly Plans</button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
 
             <div class="manage-class-section">
                 <div class="form-row manage-class-form-row">
