--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -3,7 +3,7 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, teacherSchoolToClasses: Map[String, List[duplicate.model.ClassDetails]], classIdToOverallProgress: Map[ClassId, Int])
 
 @timetoteachAppMain(handler, s"Termly Plans",
-    userPictureUri, userFirstName, userFamilyName) {
+    userPictureUri, userFirstName, userFamilyName, None) {
 
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
@@ -20,18 +20,6 @@
     </div>
 } {
     <div class="container">
-        <div class="manage-class-form-section">
-            <div class="in-app-menu-medium-and-up">
-                <div class="d-flex ">
-                    <ul class="nav mr-auto justify-content-between">
-                        <li class="nav-item manage-class-nav-item-leftmost">
-                            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
-                                Dashboard</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
 
         <div id="termly-plans-overview-of-all-classes-section">
             @for(schoolName_to_class <- teacherSchoolToClasses) {
