--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -1,8 +1,44 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], devToggle: Boolean)(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, "Dashboard", userPictureUri, userFirstName, userFamilyName) {
-    <li></li>
+@timetoteachAppMain(handler, "Dashboard", userPictureUri, userFirstName, userFamilyName, None) {
+
+    <div class="in-app-menu-small-devices">
+        <div class="row row-for-mobile"><br></div>
+        <li class="nav-item nav-login-button">
+            <a class="btn btn-outline-primary btn-block" role="button" href="@routes.Application.timeToTeachApp()">
+                Dashboard</a>
+        </li>
+
+        <li class="nav-item nav-login-button ">
+            <a class="btn btn-outline-primary btn-block" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
+                Termly Plans Home</a>
+        </li>
+
+        @if(userPictureUri.isDefined) {
+            <li class="nav-item nav-login-button">
+                <a class="nav-link" href="#"><img class="img-circle-standard" src="@userPictureUri" height="32px"></a>
+            </li>
+        }
+        <div class="row row-for-mobile"><br></div>
+        <li class="nav-item nav-login-button">
+        @if(userFirstName.isDefined) {
+            <a class="btn btn-sm btn-outline-primary btn-block" href="#" onclick="signOut();">
+                Sign Out</a>
+        } else {
+            <a class="btn btn-sm btn-outline-primary btn-block" href="@routes.Application.login()">
+                Log In</a>
+        }
+        </li>
+        <li class="nav-item nav-login-button ">
+            <a class="btn btn-sm btn-outline-primary btn-block" href="https://www.facebook.com/groups/305966139892476/">
+                <img src="@routes.Assets.versioned("icons/FB-f-Logo__blue_29.png")" alt="logo" height="19">
+                Facebook Group</a>
+        </li>
+
+
+    </div>
+
 } {
 
     <section id="dashboardContent">
