--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -9,6 +9,20 @@
     src: url('/assets/fonts/simplifica.ttf') format('truetype');
 }
 
+.side-button {
+    word-wrap: break-word;
+    word-break: normal;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
+.panel-footer {
+    width: 3.8rem;
+    height: 8.6rem;
+
+    display:block;
+    position: fixed;
+    align-self: center;
+}
 label {
     padding: 0;
     vertical-align: middle;
@@ -363,8 +377,11 @@ img {
     padding-right: 0 !important;
 }
 
+#dashboard-nav {
+    padding-top: 1rem;
+}
 #app-main-screen-title {
-    float: right;
+    /*float: right;*/
     /*margin-left: 2rem;*/
     /*clear: both;*/
     /*display: inline-block;*/
@@ -638,8 +655,21 @@ img {
     }
 
     .nav-login-button {
-        margin-left: 0.25rem;
-        margin-right: 0.25rem;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+        margin-bottom: 0;
+    }
+
+    .nav-login-button-dashboard {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-bottom: 0;
+    }
+
+    .nav-login-button-picture {
+        /*margin-left: 5rem;*/
+        /*display:inline-flex;*/
+        /*float: right;*/
     }
 
     .feature-content {
