--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -167,6 +167,17 @@
         </div>
 
 
+        <div class="modal" id="doing-stuff" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addNewGroupModalHeader">
+                            ... saving ... </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer id="main-footer">
             <div class="container">
                 <div class="row">
