--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -40,7 +40,7 @@
             <div class="manage-class-section">
                 <div class="form-row manage-class-form-row">
                     <div class="col-lg-3">
-                        <label class="add-new-class-label text-muted" for="className">Name</label>
+                        <label class="add-new-class-label text-muted" for="className">Class Name</label>
                         <input type="text" id="className" name="className" class="form-control form-control-sm editable-input-button"
                         placeholder="@classDetails.className.name" value="@classDetails.className.name" >
                     </div>
@@ -54,18 +54,6 @@
                         placeholder="@classDetails.classDescription.name" value="@classDetails.classDescription.name">
                     </div>
                 </div>
-
-                <div class="alert alert-warning alert-dismissible fade show " role="alert" >
-                    <div >
-                        <p>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            Remember to save any groups added - This will be changed to automatically save on adding the group, but for now hit the save button bottom, right of screen.
-                        </p>
-                    </div>
-                </div>
-
 
                 <div class="form-row add-new-class-form-row">
                     <div class="col-sm-12 col-lg-5">
@@ -525,10 +513,10 @@
             </div>
         </div>
 
-        <div id="save-class-edit-changes-div" class="d-flex justify-content-end" >
-            <button id="save-class-edit-changes-button" type="button" class="btn btn-lg btn-primary" disabled="true">
-                Save Changes</button>
-        </div>
+        @*<div id="save-class-edit-changes-div" class="d-flex justify-content-end" >*@
+            @*<button id="save-class-edit-changes-button" type="button" class="btn btn-lg btn-primary" disabled="true">*@
+                @*Save Changes</button>*@
+        @*</div>*@
 
     </div>
 
